--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
+
+      <!-- Search form start -->
+
+      <div class="search-form">
+        <input type="search" id="search-box" placeholder="search here..." />
+        <label for="search-box"><i data-feather="search"></i></label>
+      </div>
+
+      <!-- Search form end -->
     </nav>
 
     <!-- Navbar End -->
@@ -99,33 +108,45 @@
 
       <div class="row">
         <div class="menu-card">
-          <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          <a href="#" class="thumbnail">
+            <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          </a>
           <h3 class="menu-card-title">- Iced Coffe -</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          <a href="#" class="thumbnail">
+            <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          </a>
           <h3 class="menu-card-title">- Iced Coffe -</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          <a href="#" class="thumbnail">
+            <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          </a>
           <h3 class="menu-card-title">- Iced Coffe -</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          <a href="#" class="thumbnail">
+            <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          </a>
           <h3 class="menu-card-title">- Iced Coffe -</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          <a href="#" class="thumbnail">
+            <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          </a>
           <h3 class="menu-card-title">- Iced Coffe -</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="/img/77.png" alt="Espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espresso -</h3>
+          <a href="#" class="thumbnail">
+            <img src="/img/77.png" alt="Iced coffe" class="menu-card-img" />
+          </a>
+          <h3 class="menu-card-title">- Iced Coffe -</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
       </div>
